1.1.6/Initial Setup.md
# Первоначальная настройка

В данном разделе описывается процесс первоначальной настройки и установки **Carrot** на рабочие станции под управлением операционной системы **Windows 10**.

## Установка сторонних программных компонентов

Для работы **Carrot** требуется установка сторонних программных компонентов, реализующее корректное программное взаимодействие между элементами системы. 

### Установка компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2013"

>В случае отсутствия предустановленных на рабочей станции **компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2013"**, необходимо их загрузить с [официального сайта производителя "Microsoft"](https://www.microsoft.com/ru-ru/download/details.aspx?id=40784) или воспользоваться соответствующей кнопкой ниже:
>
>*[`Загрузить компоненты среды выполнения библиотек "Visual C++ для Visual Studio 2013"`](https://aka.ms/highdpimfc2013x64enu)*

 Для установки компонентов среды выполнения библиотек **"Visual C++ для Visual Studio 2013"**, необходимо запустить исполняющий файл с расширением **".exe"**. 

### Установка компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"

>В случае отсутствия предустановленных на рабочей станции **компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"**, необходимо их загрузить с [официального сайта производителя "Microsoft"](https://learn.microsoft.com/ru-ru/cpp/windows/latest-supported-vc-redist?view=msvc-170#visual-studio-2015-2017-2019-and-2022) или воспользоваться соответствующей кнопкой ниже:
>
>*[`Загрузить компоненты среды выполнения библиотек "Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"`](https://aka.ms/vs/17/release/vc_redist.x64.exe)*

 Для установки компонентов среды выполнения библиотек **"Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"**, необходимо запустить исполняющий файл с расширением **".exe"**. 

### Установка программной платформы "Microsoft .NET версии № 4.7.1 runtime"

>В случае отсутствия предустановленных на рабочей станции **программной платформы "Microsoft .NET версии № 4.7.1 runtime"**, необходимо их загрузить с [официального сайта производителя "Microsoft"](https://dotnet.microsoft.com/en-us/download/dotnet-framework/thank-you/net471-offline-installer) или воспользоваться соответствующей кнопкой ниже:
>
>*[`Загрузить программную платформу "Microsoft .NET версии № 4.7.1 runtime"`](https://dotnet.microsoft.com/en-us/download/dotnet-framework/thank-you/net471-offline-installer)*

 Для установки программной платформы **"Microsoft .NET версии № 4.7.1 runtime"**, необходимо запустить исполняющий файл с расширением **".exe"**. 

### Установка драйвера для устройств видеозахвата изображений "Blackmagic"

В первую очередь, перед установкой драйвера для устройств видеозахвата изображений **"Blackmagic"**, необходимо осуществить его загрузку с [официального сайта производителя "Blackmagicdesign"](https://www.blackmagicdesign.com/support/download/2de27a45d5454a0aa37353b4a742c179/Windows).

В открывшейся вкладке веб-браузера, необходимо нажать кнопку `Download Only` и дождаться завершения загрузки соответствующего файла.

![BMD Install](..\images\1.1.5\Initial%20Setup\BMD%20Install.png)

Далее, после загрузки драйвера для устройств видеозахвата изображений **"Blackmagic"**, необходимо воспользоваться файловым архиватором и запустить файл-установщик с расширением **".msi"** для дальнейшей установки. 

### Установка драйвера для видеокарты Nvidia

Для повышения производительности и обеспечения совместимости при работе **Carrot** со сторонним программным обеспечением, необходима установка драйвера **"Nvidia Studio"** версии **"528.49"**.

>В случае отсутствия предустановленного на рабочей станции драйвера **"Nvidia Studio 528.49"** , необходимо осуществить его загрузку с [официального сайта производителя "Nvidia"](https://www.nvidia.com/en-us/drivers/details/199662/) или воспользоваться соответствующей кнопкой ниже:
>
>*[`Загрузить драйвер "Nvidia Studio версии № 528.29"`](https://us.download.nvidia.com/Windows/528.49/528.49-desktop-win10-win11-64bit-international-nsd-dch-whql.exe)*

 Для установки драйвера **"Nvidia Studio версии № 528.49"**, необходимо запустить исполняющий файл с расширением **".exe"**. 

## Первоначальная настройка компонентов операционной системы

Первоначальная настройка компонентов операционной системы, предназначена для обеспечения максимальной производительности и стабильности работы рабочей станции с приложениями Carrot.

>Первоначальную настройку компонентов операционной системы необходимо осуществлять после **установки сторонних программных компонентов**, перечень которых изложен в соответствующем разделе.

Основными настраиваемыми компонентами операционной системы являются:
- **драйвер графического устройства NVIDIA**;
- **система управления питанием**;
- **подсистема планирования графических задач**.

### Настройка драйвера графического устройства NVIDIA

Для **настройки драйвера графического устройства NVIDIA**, необходимо выполнить следующие действия:
- **Шаг № 1**. На рабочем столе операционной системы, осуществить взаимодействие с `правой кнопкой мыши (ПКМ)` и в открывшемся окне нажать кнопку `Панель управления NVIDIA`;

![NVIDIA_CP](..\images\1.1.6\Initial%20Setup\IS%20of%20OS%20Components\NVIDIA_CP.png)

- **Шаг № 2**. В открывшемся окне "Панель управления NVIDIA" провзаимодействовать с кнопкой `Управление параметрами 3D`, затем в разделе **"Глобальные параметры"** у параметра **"Режим управления электропитанием"** выбрать значение `Предпочтителен режим максимальной производительности` и подтвердить выполненные действия с помощью кнопки `Применить`.

![NVIDIA_CP_Settings](..\images\1.1.6\Initial%20Setup\IS%20of%20OS%20Components\NVIDIA_CP_Settings.png)

На данном этапе, **настройка драйвера графического устройства NVIDIA** считается **завершённой**.

### Настройка системы управления питанием

Для **настройки системы управления питанием**, необходимо выполнить следующие действия:
- **Шаг № 1**. На рабочем столе операционной системы, осуществить взаимодействие с меню **"Поиск"**, ввести **"Панель управления"** и открыть соответствующее приложение;
- **Шаг № 2**. В окне **"Панель управления"** провзаимодействовать с кнопкой `Электропитание`;

![Control_Panel_PS](..\images\1.1.6\Initial%20Setup\IS%20of%20OS%20Components\Control_Panel_PS.png)

- **Шаг № 3**. В разделе **"Основные схемы"** выбрать параметр **"Высокая производительность"** и закрыть приложение **"Панель управления"**.

![Control_Panel_PS_Schemes.png](..\images\1.1.6\Initial%20Setup\IS%20of%20OS%20Components\Control_Panel_PS_Schemes.png)

На данном этапе, **настройка системы управления электропитанием** считается **завершённой**.

### Настройка подсистемы планирования графических задач

Для **настройки подсистемы планирования графических задач**, необходимо выполнить следующие действия:
- **Шаг № 1**. На рабочем столе операционной системы, осуществить взаимодействие с меню **"Поиск"**, ввести **"Настройки графики"** и открыть соответствующее приложение;
- **Шаг № 2**. В открывшемся окне **"Настройки графики"** включить параметр `Планирование графического процессора с аппаратном ускорением` и осуществить перезагрузку рабочей станции.

![Graphics_Settings.png](..\images\1.1.6\Initial%20Setup\IS%20of%20OS%20Components\Graphics_Settings.png)

На данном этапе, **настройка подсистемы планирования графических задач** считается **завершённой**.


## Установка Carrot на рабочую станцию

После установки стороннего программного обеспечения, необходимо открыть поставляемый файл с программным обеспечением **Carrot**. 

![Carrot Folder Contents](..\images\1.1.5\Initial%20Setup\Carrot%20Folder%20Contents.png)

Поставляемое программное обеспечение **Carrot** представляет из себя папку с директориями **"Bin"**, **"Data"** и **"Help"**.

Установка **Carrot** на рабочую станцию осуществляется посредством **инициализации** его внутренних компонентов. Для их **инициализации**, необходимо:

- открыть папку **"Bin"**;
- запустить файл **"InitSettings.exe"**;
- в открывшемся окне **"Message"** нажать кнопку `ОК`.

В результате проделанных действий, на **рабочем столе** рабочей станции отобразятся ярлыки приложений **Carrot**, а установка **Carrot** считается завершённой.

>Для работы **Carrot**, необходимо использование лицензионного ключа (поставляется на USB Flash накопителе совместно с программным обеспечением **Carrot**), в противном случае, работа **Carrot** будет осуществляться с ограниченным функционалом.
>
>Для получения доступа к функционалу **Carrot** в демонстрационном режиме, необходимо в параметр `License Key` приложений **Carrot** ввести значение `0`.
>
>Ввод лицензионного ключа **Carrot** рекомендуется проводить совместно со специалистами технической поддержки **Carrot Broadcast**. 
